Edit style.css - Overall rearrangement. - Fixed an issue where related content would overflow their containers.

--- a/style.css
+++ b/style.css
@@ -1,23 +1,19 @@
-html {
+html, body {
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 * {
     box-sizing: inherit;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
 /* Section I ~ This is here to separate website to sections. */
 
 .container-1 {
     background-color: #1F2937;
-    border: 5px solid goldenrod;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
@@ -26,7 +22,6 @@ body {
 }
 
 .header-container {
-    border: 5px solid red;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +30,6 @@ body {
 }
 
 .logo {
-    border: 2px solid bisque;
     color: #F9FAF8;
     font-size: 24px;
     flex: auto;
@@ -47,8 +41,10 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    align-content: flex-end;
+    flex-wrap: wrap;
     flex: auto;
-    border: 2px solid green;
+    gap: 12px;
 }
 
 ul > li {
@@ -62,19 +58,30 @@ li > a {
     font-size: 18px;
 }
 
+a:hover {
+    color: orange;
+}
+
 /* Section II ~ This is here to separate website to sections. */
 
 .hero-container {
-    border: 5px solid mediumaquamarine;
+    border: 5px solid gold;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 56px;
     width: 75%;
+    height: 75%;
 }
 
 .hero {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-self: stretch;
+    gap: 5px;
+    flex: 1;
 }
 
 .main-text {
@@ -101,7 +108,18 @@ li > a {
     background-color: hsl(217, 91%, 40%);
 }
 
-#picture img {
+.picture {
+    border: 5px solid mediumaquamarine;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    align-self: stretch;
+    width: 500px;
+    height: 300px;
+    flex: 1;
+}
+
+.picture img {
     max-width: 100%;
     max-height: 100%;
 }
@@ -109,7 +127,6 @@ li > a {
 /* Section III ~ This is here to separate website to sections. */
 
 .container-2 {
-    border: 5px solid goldenrod;
     text-align: center;
     padding: 0px 56px 48px 56px;
     display: flex;
@@ -119,7 +136,6 @@ li > a {
 }
 
 .information {
-    border: 5px solid red;
     color: #1F2937;
     font-size: 36px;
     font-weight: 900;
@@ -127,7 +143,6 @@ li > a {
 }
 
 .box-container {
-    border: 5px solid mediumaquamarine;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,7 +156,7 @@ li > a {
 .box {
     width: 250px;
     height: 250px;
-    margin-bottom: 8px;
+    margin-bottom: 36px;
 }
 
 .box-picture {
@@ -149,18 +164,19 @@ li > a {
     margin: auto;
     width: 100%;
     height: 100%;
-    border: 2px solid #3882F6;
+    border: 3px solid #3882F6;
     border-radius: 5px;
 }
 
 .box-text {
     margin: 8px 0px;
+    color: #1F2937;
+    font-style: italic;
 }
 
 /* Section IV ~ This is here to separate website to sections. */
 
 .container-3 {
-    border: 5px solid goldenrod;
     background-color: #E5E7EB;
     padding: 64px;
     display: flex;
@@ -169,18 +185,18 @@ li > a {
 }
 
 .quote-container {
-    border: 5px solid mediumaquamarine;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 775px;
-    height: 300px;
+    width: 50%;
+    height: 50%;
 }
 
 .quote {
     color: #1F2937;
     font-size: 36px;
+    font-weight: 100;
     font-style: italic;
 }
 
@@ -193,26 +209,23 @@ li > a {
 /* Section V ~ This is here to separate website to sections. */
 
 .container-4 {
-    border: 5px solid goldenrod;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px 108px;
 }
 
 .product-container {
-    border: 5px solid mediumaquamarine;
+    border: 5px solid #3882F6;
     background-color: #3882F6;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 36px 0px;
+    border-radius: 5px;
+    padding: 36px 0x;
     margin: 48px 0px;
     width: 1000px;
     height: 150px;
-}
-
-.call-container {
-    border: 2px solid red;
 }
 
 .call {
